--- a/ProjectOne/test-output/old/Failed suite [Suite]/methods-alphabetical.html
+++ b/ProjectOne/test-output/old/Failed suite [Suite]/methods-alphabetical.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Failed suite [Suite]</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="84a09e">  <td>17/08/16 00:05:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParallelExc.chrmBrw()[pri:0, instance:com.web.TestNgRltd.ParallelExc@3c756e4d]">chrmBrw</td> 
-  <td>TestNG-test=Test(failed)-1@288872556</td>   <td></td> </tr>
+<tr bgcolor="b9f472">  <td>17/08/16 17:41:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParallelExc.chrmBrw()[pri:0, instance:com.web.TestNgRltd.ParallelExc@3159c4b8]">chrmBrw</td> 
+  <td>main@1551870003</td>   <td></td> </tr>
+<tr bgcolor="b9f472">  <td>17/08/16 17:41:16</td>   <td>-11851</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParallelExc.fireFoxBrowser()[pri:0, instance:com.web.TestNgRltd.ParallelExc@3159c4b8]">fireFoxBrowser</td> 
+  <td>main@1551870003</td>   <td></td> </tr>
+<tr bgcolor="b9f472">  <td>17/08/16 17:41:28</td>   <td>-582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ParallelExc.tearDown(org.testng.ITestResult)[pri:0, instance:com.web.TestNgRltd.ParallelExc@3159c4b8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1551870003</td>   <td></td> </tr>
+<tr bgcolor="b9f472">  <td>17/08/16 17:41:37</td>   <td>8926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ParallelExc.tearDown(org.testng.ITestResult)[pri:0, instance:com.web.TestNgRltd.ParallelExc@3159c4b8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1551870003</td>   <td></td> </tr>
 </table>
