--- a/ProjectOne/test-output/old/Suite/methods.html
+++ b/ProjectOne/test-output/old/Suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fee26c">  <td>17/08/16 13:41:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParallelExc.chrmBrw()[pri:0, instance:com.web.TestNgRltd.ParallelExc@548b7f67]">chrmBrw</td> 
-  <td>main@650023597</td>   <td></td> </tr>
-<tr bgcolor="fee26c">  <td>17/08/16 13:41:28</td>   <td>10326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ParallelExc.tearDown(org.testng.ITestResult)[pri:0, instance:com.web.TestNgRltd.ParallelExc@548b7f67]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@650023597</td>   <td></td> </tr>
-<tr bgcolor="fee26c">  <td>17/08/16 13:41:32</td>   <td>13895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParallelExc.fireFoxBrowser()[pri:0, instance:com.web.TestNgRltd.ParallelExc@548b7f67]">fireFoxBrowser</td> 
-  <td>main@650023597</td>   <td></td> </tr>
-<tr bgcolor="fee26c">  <td>17/08/16 13:41:42</td>   <td>23857</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ParallelExc.tearDown(org.testng.ITestResult)[pri:0, instance:com.web.TestNgRltd.ParallelExc@548b7f67]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@650023597</td>   <td></td> </tr>
+<tr bgcolor="fee26c">  <td>17/08/16 17:43:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParallelExc.fireFoxBrowser()[pri:0, instance:com.web.TestNgRltd.ParallelExc@548b7f67]">fireFoxBrowser</td> 
+  <td>TestNG-test=Test-2@1535925522</td>   <td></td> </tr>
+<tr bgcolor="fee26c">  <td>17/08/16 17:43:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParallelExc.chrmBrw()[pri:0, instance:com.web.TestNgRltd.ParallelExc@548b7f67]">chrmBrw</td> 
+  <td>TestNG-test=Test-1@913026608</td>   <td></td> </tr>
+<tr bgcolor="fee26c">  <td>17/08/16 17:44:10</td>   <td>13080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ParallelExc.tearDown(org.testng.ITestResult)[pri:0, instance:com.web.TestNgRltd.ParallelExc@548b7f67]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@1535925522</td>   <td></td> </tr>
+<tr bgcolor="fee26c">  <td>17/08/16 17:44:10</td>   <td>13085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ParallelExc.tearDown(org.testng.ITestResult)[pri:0, instance:com.web.TestNgRltd.ParallelExc@548b7f67]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@1535925522</td>   <td></td> </tr>
 </table>
